<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="428dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:background="@color/steel_blue"
        android:gravity="center_horizontal"
        android:text="@string/loan_summary"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <!-- TEXTVIEW HOLDING THE MONTHLY PAYMENT-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        tools:layout_editor_absoluteX="205dp" />


    <!-- TEXTVIEW HOLDING THE CAR LOAN SUMMARY-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <!-- BUTTON TO GO TO DATA ENTRY -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:onClick="goDataEntry"
        android:text="@string/go_data_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
